--- a/public/admin/assets/css/app.css
+++ b/public/admin/assets/css/app.css
@@ -3935,10 +3935,11 @@ input.knob {
     padding: 8px !important;
 }
 #btnPlus{
-    position: absolute;
+    position: fixed;
     top: 78%;
     right: 3%;
     z-index: 1111111;
+
 }
 
 
