--- a/public/admin/assets/css/app.css
+++ b/public/admin/assets/css/app.css
@@ -3935,7 +3935,7 @@ input.knob {
     padding: 8px !important;
 }
 #btnPlus{
-    position: fixed;
+    position:absolute;
     top: 78%;
     right: 3%;
     z-index: 1111111;
